Contrast corrections made

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -130,7 +130,8 @@ nav a:hover {
     justify-content: center;    
 }
 
-.history h2 {
+.history h2 {    
+    color: var(--secondary-color);
     grid-column: 2/3;
     grid-row: 1/2;
 }
@@ -155,6 +156,7 @@ nav a:hover {
 }
 
 .adventure h2 {
+    color: var(--secondary-color);
     grid-column: 1/6;
     grid-row: 1/2;
 }
